--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,8 @@ spring.datasource.username=root
 spring.datasource.password=1211
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 
+discord.bot.token=${DISCORD_BOT_TOKEN}
+
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
