--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=demo
 
-spring.datasource.url=jdbc:mariadb://localhost:3306/board
+spring.datasource.url=jdbc:mariadb://localhost:3306/mandm
 spring.datasource.username=root
 spring.datasource.password=1211
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
@@ -8,5 +8,20 @@ spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 discord.bot.token=${DISCORD_BOT_TOKEN}
 
 spring.jpa.hibernate.ddl-auto=update
+
+#dasdf
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.defer-datasource-initialization=true
+
+spring.h2.console.enabled=true
+
+jwt.issuer=ajufresh@gmail.com
+jwt.secret_key=study-springboot
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=s25001@gmail.com
+spring.mail.password=uzmf qiic cqjs wjau
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
