프로필 api 개발

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 
 discord.bot.token=${DISCORD_BOT_TOKEN}
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 
 #dasdf
 spring.jpa.show-sql=true
