--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,7 +21,8 @@ jwt.secret_key=study-springboot
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=s25001@gmail.com
-spring.mail.password=uzmf qiic cqjs wjau
+spring.mail.username=${MAIL_USERNAME}
+spring.mail.password=${MAIL_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+logging.level.org.springframework.security=DEBUG
