--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=demo
 
-spring.datasource.url=jdbc:mariadb://localhost:3306/mandm
-spring.datasource.username=root
-spring.datasource.password=1211
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 
 discord.bot.token=${DISCORD_BOT_TOKEN}
