--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,10 +9,13 @@ discord.bot.token=${DISCORD_BOT_TOKEN}
 
 spring.jpa.hibernate.ddl-auto=update
 
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+
 #dasdf
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.defer-datasource-initialization=true
+spring.jpa.defer-datasource-initialization=false
 
 spring.h2.console.enabled=true
 
@@ -26,3 +29,4 @@ spring.mail.password=${MAIL_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 logging.level.org.springframework.security=DEBUG
+
