--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,8 @@ spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 
 discord.bot.token=${DISCORD_BOT_TOKEN}
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
 
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
@@ -15,8 +16,7 @@ spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.Ph
 #dasdf
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.defer-datasource-initialization=false
-
+spring.jpa.defer-datasource-initialization=true
 spring.h2.console.enabled=true
 
 jwt.issuer=ajufresh@gmail.com
