--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 
 discord.bot.token=${DISCORD_BOT_TOKEN}
 
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
 
 spring.jpa.database-platform=org.hibernate.dialect.MariaDBDialect
